--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FlickrAPIDemo</string>
+    <string name="search_hint">Search for image by text</string>
 </resources>
