--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FlickrAPIDemo</string>
     <string name="search_hint">Search for image by text</string>
+    <string name="no_internet_connection">No internet connection</string>
 </resources>
